fix TOC toggle getting wrapped in some browsers

--- a/root/static/less/style.less
+++ b/root/static/less/style.less
@@ -125,6 +125,10 @@
     width: 100%;
 }
 
+.slidepanel.nav-list.nav > li > a {
+    padding-right: 0;
+}
+
 .nav-list .nav-header {
   margin-right: auto;
 }
